secondary button background contrast fix for accessibility

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -386,8 +386,8 @@ button.button:disabled:hover {
 
 main a.button.secondary,
 button.button.secondary {
-  background-color: #DC6E52;
-  border: #DC6E52 solid;
+  background-color: #95351D;
+  border: #95351D solid;
   color: #fff;
 }
 
